--- a/whitespace/build.gradle
+++ b/whitespace/build.gradle
@@ -5,14 +5,22 @@ plugins {
 
 group = 'gay.ampflower.bic'
 
-sourceCompatibility = 1.10
-targetCompatibility = 1.10
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 tasks.withType(JavaCompile) { options.encoding = 'UTF-8' }
 
 mainClassName = 'gay.ampflower.bic.whitespace.Main'
 
 repositories {
     mavenCentral()
+}
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': this.mainClassName
+        )
+    }
 }
 
 dependencies {
