--- a/whitespace/build.gradle
+++ b/whitespace/build.gradle
@@ -24,5 +24,5 @@ jar {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
